--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <td>
         <h1>Rohit Singh</h1>
         <p><em>Student Of <strong><a href="https://teri.ac.in/">Technical Education And Research Institute</a></strong></em></p>
-        <p><em>Department Of <strong>Computer Science</strong></em></p>
+        <p><em>Department Of <strong>Computer Applications.</strong></em></p>
       </td>
     </tr>
   </table>
@@ -27,7 +27,7 @@
       of text
     2). <b> vs <strong> :- -->
   <br>
-  <p>Hello, I am Rohit Singh, and I will be completing my bachelor’s degree in Compter Science from <a href="https://teri.ac.in/">Technical Education and Research Institute</a> in August. I have worked on a wide variety of projects that have allowed
+  <p>Hello, I am Rohit Singh, and I will be completing my bachelor’s degree in Compter Application from <a href="https://teri.ac.in/">Technical Education and Research Institute</a> in August. I have worked on a wide variety of projects that have allowed
     me to put what I’ve learned in the
     classroom into use in a practical sense. I am Intrested in Web Development as Full Stack Developer. also I have many skills to contribute including HTML/CSS skills.
     Analytical skills, Responsive design skills, JavaScript skills, Interpersonal skills, Back-end basics, Search engine optimization etc.</p>
@@ -35,12 +35,12 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li><strong>Bachelor's Degree- Computer Science,202X</strong>
+    <li><strong>Bachelor's Degree- Computer Application,202X</strong>
       <br><a href="https://teri.ac.in/">Technical Education and Research Institute</a>,
       <br>Ravindrapuri, Ghazipur-233001 UP.
     </li>
     <br>
-    <li><strong>Master's Degree- Computer Science,202X</strong>
+    <li><strong>Master's Degree- Computer Application,202X</strong>
       <br>still not...
     </li>
   </ul>
